ci-pipeline/config-root/cluster/c-allowedrepo.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: prod-repo-list
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod","Deployment"]
    excludedNamespaces:
      - istio-system
      - kube-system
      - gatekeeper-system
      - config-management-system
  parameters:
    repos:
      - gcr.io
